--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -314,6 +314,22 @@
   .navLogo span {
     font-size: calc(1.375rem + 1vw);
   }
+
+  .navbar .navBecomehost {
+    padding: 0dvb 0px;
+    font-size: 1.2rem;
+    letter-spacing: -0.2px;
+  }
+
+    .navbar .menu-icon,
+  .navbar .account-icon,
+  .navbar .menuOpen {
+    font-size: 1.7rem;
+  }
+
+  .navbar .menuOpen {
+    padding: 0 10px;
+  }
 }
 
 
