bagess and note to host listing are verifying first then list to all user reservation on

--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -92,7 +92,7 @@
                 <div class="mt-3 pt-3 border-top">
                     <p class="mb-0 extra-small text-secondary">
                         <i class="fa-solid fa-circle-info me-1"></i> 
-                        Find all your properties in <strong>My Profile</strong> <i class="fa-solid fa-chevron-right mx-1" style="font-size: 8px;"></i> <strong>Your Listings</strong>.
+                        Find all your properties in <strong>My Profile</strong> <span class="material-symbols-outlined"  style="font-size: 1.3rem; vertical-align: middle;">arrow_right_alt</span><strong>Your Listings</strong>.
                     </p>
                 </div>
             </div>
